编译原理实验/实验12/11/11/py_parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS

Grammar

Rule 0     S' -> segment
Rule 1     segment -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> if
Rule 8     statement -> else
Rule 9     statement -> elif
Rule 10    statement -> while
Rule 11    statement -> break
Rule 12    statement -> for
Rule 13    statement -> function
Rule 14    statement -> runFunction
Rule 15    statement -> return
Rule 16    return -> RETURN
Rule 17    return -> RETURN term
Rule 18    function -> DEF VARIABLE ( functionTerms ) { statements }
Rule 19    function -> DEF VARIABLE ( ) { statements }
Rule 20    runFunction -> VARIABLE ( runFunctionTerms )
Rule 21    runFunction -> VARIABLE ( )
Rule 22    runFunctionTerms -> term
Rule 23    runFunctionTerms -> runFunctionTerms , term
Rule 24    functionTerms -> VARIABLE
Rule 25    functionTerms -> functionTerms , VARIABLE
Rule 26    break -> BREAK
Rule 27    while -> WHILE ( condition ) { statements }
Rule 28    for -> FOR ( assignment ; condition ; VARIABLE + + ) { statements }
Rule 29    if -> IF ( condition ) { statements }
Rule 30    else -> ELSE { statements }
Rule 31    elif -> ELIF ( condition ) { statements }
Rule 32    and -> condition AND condition
Rule 33    or -> condition OR condition
Rule 34    condition -> greater
Rule 35    condition -> greater_equal
Rule 36    condition -> less
Rule 37    condition -> less_equal
Rule 38    condition -> equal_equal
Rule 39    condition -> and
Rule 40    condition -> or
Rule 41    greater -> term > term
Rule 42    greater_equal -> term > = term
Rule 43    less -> term < term
Rule 44    less_equal -> term < = term
Rule 45    equal_equal -> term = = term
Rule 46    assignment -> VARIABLE = term
Rule 47    assignment -> VARIABLE = array
Rule 48    assignment -> array_term = term
Rule 49    assignment -> VARIABLE + = term
Rule 50    assignment -> array_term + = term
Rule 51    assignment -> VARIABLE - = term
Rule 52    assignment -> array_term - = term
Rule 53    assignment -> VARIABLE * = term
Rule 54    assignment -> array_term * = term
Rule 55    assignment -> VARIABLE / = term
Rule 56    assignment -> array_term / = term
Rule 57    operation -> ADD
Rule 58    operation -> SUB
Rule 59    operation -> MUL
Rule 60    operation -> DIV
Rule 61    operation -> DIV_ext
Rule 62    operation -> ( operation )
Rule 63    ADD -> term + term
Rule 64    SUB -> term - term
Rule 65    MUL -> term * term
Rule 66    DIV -> term / term
Rule 67    DIV_ext -> term / / term
Rule 68    print -> PRINT ( pcontent )
Rule 69    array_term -> VARIABLE [ term ]
Rule 70    array -> [ pcontent ]
Rule 71    pcontent -> pcontent , term
Rule 72    pcontent -> term
Rule 73    term -> VARIABLE
Rule 74    term -> NUMBER
Rule 75    term -> operation
Rule 76    term -> array_term
Rule 77    term -> len
Rule 78    term -> runFunction
Rule 79    len -> LEN ( VARIABLE )

Terminals, with rules where they appear

(                    : 18 19 20 21 27 28 29 31 62 68 79
)                    : 18 19 20 21 27 28 29 31 62 68 79
*                    : 53 54 65
+                    : 28 28 49 50 63
,                    : 23 25 71
-                    : 51 52 64
/                    : 55 56 66 67 67
;                    : 28 28
<                    : 43 44
=                    : 42 44 45 45 46 47 48 49 50 51 52 53 54 55 56
>                    : 41 42
AND                  : 32
BREAK                : 26
CLASS                : 
DEF                  : 18 19
ELIF                 : 31
ELSE                 : 30
FOR                  : 28
IF                   : 29
LEN                  : 79
NUMBER               : 74
OR                   : 33
PRINT                : 68
RETURN               : 16 17
VARIABLE             : 18 19 20 21 24 25 28 46 47 49 51 53 55 69 73 79
WHILE                : 27
[                    : 69 70
]                    : 69 70
error                : 
{                    : 18 19 27 28 29 30 31
}                    : 18 19 27 28 29 30 31

Nonterminals, with rules where they appear

ADD                  : 57
DIV                  : 60
DIV_ext              : 61
MUL                  : 59
SUB                  : 58
and                  : 39
array                : 47
array_term           : 48 50 52 54 56 76
assignment           : 4 28
break                : 11
condition            : 27 28 29 31 32 32 33 33
elif                 : 9
else                 : 8
equal_equal          : 38
for                  : 12
function             : 13
functionTerms        : 18 25
greater              : 34
greater_equal        : 35
if                   : 7
len                  : 77
less                 : 36
less_equal           : 37
operation            : 5 62 75
or                   : 40
pcontent             : 68 70 71
print                : 6
return               : 15
runFunction          : 14 78
runFunctionTerms     : 20 23
segment              : 0
statement            : 2 3
statements           : 1 2 18 19 27 28 29 30 31
term                 : 17 22 23 41 41 42 42 43 43 44 44 45 45 46 48 49 50 51 52 53 54 55 56 63 63 64 64 65 65 66 66 67 67 69 71 72
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . segment
    (1) segment -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (13) statement -> . function
    (14) statement -> . runFunction
    (15) statement -> . return
    (46) assignment -> . VARIABLE = term
    (47) assignment -> . VARIABLE = array
    (48) assignment -> . array_term = term
    (49) assignment -> . VARIABLE + = term
    (50) assignment -> . array_term + = term
    (51) assignment -> . VARIABLE - = term
    (52) assignment -> . array_term - = term
    (53) assignment -> . VARIABLE * = term
    (54) assignment -> . array_term * = term
    (55) assignment -> . VARIABLE / = term
    (56) assignment -> . array_term / = term
    (57) operation -> . ADD
    (58) operation -> . SUB
    (59) operation -> . MUL
    (60) operation -> . DIV
    (61) operation -> . DIV_ext
    (62) operation -> . ( operation )
    (68) print -> . PRINT ( pcontent )
    (29) if -> . IF ( condition ) { statements }
    (30) else -> . ELSE { statements }
    (31) elif -> . ELIF ( condition ) { statements }
    (27) while -> . WHILE ( condition ) { statements }
    (26) break -> . BREAK
    (28) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (18) function -> . DEF VARIABLE ( functionTerms ) { statements }
    (19) function -> . DEF VARIABLE ( ) { statements }
    (20) runFunction -> . VARIABLE ( runFunctionTerms )
    (21) runFunction -> . VARIABLE ( )
    (16) return -> . RETURN
    (17) return -> . RETURN term
    (69) array_term -> . VARIABLE [ term ]
    (63) ADD -> . term + term
    (64) SUB -> . term - term
    (65) MUL -> . term * term
    (66) DIV -> . term / term
    (67) DIV_ext -> . term / / term
    (73) term -> . VARIABLE
    (74) term -> . NUMBER
    (75) term -> . operation
    (76) term -> . array_term
    (77) term -> . len
    (78) term -> . runFunction
    (79) len -> . LEN ( VARIABLE )

    VARIABLE        shift and go to state 8
    (               shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 17
    ELSE            shift and go to state 12
    ELIF            shift and go to state 1
    WHILE           shift and go to state 18
    BREAK           shift and go to state 3
    FOR             shift and go to state 26
    DEF             shift and go to state 2
    RETURN          shift and go to state 27
    NUMBER          shift and go to state 29
    LEN             shift and go to state 24

    function                       shift and go to state 20
    ADD                            shift and go to state 23
    segment                        shift and go to state 4
    len                            shift and go to state 21
    else                           shift and go to state 36
    SUB                            shift and go to state 35
    assignment                     shift and go to state 25
    while                          shift and go to state 34
    operation                      shift and go to state 9
    MUL                            shift and go to state 10
    statement                      shift and go to state 28
    DIV                            shift and go to state 22
    return                         shift and go to state 30
    term                           shift and go to state 31
    break                          shift and go to state 32
    runFunction                    shift and go to state 33
    array_term                     shift and go to state 13
    for                            shift and go to state 14
    statements                     shift and go to state 19
    if                             shift and go to state 16
    print                          shift and go to state 6
    DIV_ext                        shift and go to state 11
    elif                           shift and go to state 15

state 1

    (31) elif -> ELIF . ( condition ) { statements }

    (               shift and go to state 37


state 2

    (18) function -> DEF . VARIABLE ( functionTerms ) { statements }
    (19) function -> DEF . VARIABLE ( ) { statements }

    VARIABLE        shift and go to state 38


state 3

    (26) break -> BREAK .

    }               reduce using rule 26 (break -> BREAK .)
    VARIABLE        reduce using rule 26 (break -> BREAK .)
    (               reduce using rule 26 (break -> BREAK .)
    PRINT           reduce using rule 26 (break -> BREAK .)
    IF              reduce using rule 26 (break -> BREAK .)
    ELSE            reduce using rule 26 (break -> BREAK .)
    ELIF            reduce using rule 26 (break -> BREAK .)
    WHILE           reduce using rule 26 (break -> BREAK .)
    BREAK           reduce using rule 26 (break -> BREAK .)
    FOR             reduce using rule 26 (break -> BREAK .)
    DEF             reduce using rule 26 (break -> BREAK .)
    RETURN          reduce using rule 26 (break -> BREAK .)
    NUMBER          reduce using rule 26 (break -> BREAK .)
    LEN             reduce using rule 26 (break -> BREAK .)
    $end            reduce using rule 26 (break -> BREAK .)


state 4

    (0) S' -> segment .



state 5

    (62) operation -> ( . operation )
    (57) operation -> . ADD
    (58) operation -> . SUB
    (59) operation -> . MUL
    (60) operation -> . DIV
    (61) operation -> . DIV_ext
    (62) operation -> . ( operation )
    (63) ADD -> . term + term
    (64) SUB -> . term - term
    (65) MUL -> . term * term
    (66) DIV -> . term / term
    (67) DIV_ext -> . term / / term
    (73) term -> . VARIABLE
    (74) term -> . NUMBER
    (75) term -> . operation
    (76) term -> . array_term
    (77) term -> . len
    (78) term -> . runFunction
    (69) array_term -> . VARIABLE [ term ]
    (79) len -> . LEN ( VARIABLE )
    (20) runFunction -> . VARIABLE ( runFunctionTerms )
    (21) runFunction -> . VARIABLE ( )

    (               shift and go to state 5
    VARIABLE        shift and go to state 39
    NUMBER          shift and go to state 29
    LEN             shift and go to state 24

    DIV                            shift and go to state 22
    array_term                     shift and go to state 42
    MUL                            shift and go to state 10
    SUB                            shift and go to state 35
    len                            shift and go to state 21
    ADD                            shift and go to state 23
    term                           shift and go to state 31
    operation                      shift and go to state 40
    runFunction                    shift and go to state 41
    DIV_ext                        shift and go to state 11

state 6

    (6) statement -> print .

    }               reduce using rule 6 (statement -> print .)
    VARIABLE        reduce using rule 6 (statement -> print .)
    (               reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    ELSE            reduce using rule 6 (statement -> print .)
    ELIF            reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    NUMBER          reduce using rule 6 (statement -> print .)
    LEN             reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)


state 7

    (68) print -> PRINT . ( pcontent )

    (               shift and go to state 43


state 8

    (46) assignment -> VARIABLE . = term
    (47) assignment -> VARIABLE . = array
    (49) assignment -> VARIABLE . + = term
    (51) assignment -> VARIABLE . - = term
    (53) assignment -> VARIABLE . * = term
    (55) assignment -> VARIABLE . / = term
    (20) runFunction -> VARIABLE . ( runFunctionTerms )
    (21) runFunction -> VARIABLE . ( )
    (69) array_term -> VARIABLE . [ term ]
    (73) term -> VARIABLE .

  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
    =               shift and go to state 50
    +               shift and go to state 47
    -               shift and go to state 49
    *               shift and go to state 44
    /               shift and go to state 45
    (               shift and go to state 46
    [               shift and go to state 48

  ! +               [ reduce using rule 73 (term -> VARIABLE .) ]
  ! -               [ reduce using rule 73 (term -> VARIABLE .) ]
  ! *               [ reduce using rule 73 (term -> VARIABLE .) ]
  ! /               [ reduce using rule 73 (term -> VARIABLE .) ]


state 9

    (5) statement -> operation .
    (75) term -> operation .

    }               reduce using rule 5 (statement -> operation .)
    VARIABLE        reduce using rule 5 (statement -> operation .)
    (               reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    ELSE            reduce using rule 5 (statement -> operation .)
    ELIF            reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    DEF             reduce using rule 5 (statement -> operation .)
    RETURN          reduce using rule 5 (statement -> operation .)
    NUMBER          reduce using rule 5 (statement -> operation .)
    LEN             reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    +               reduce using rule 75 (term -> operation .)
    -               reduce using rule 75 (term -> operation .)
    *               reduce using rule 75 (term -> operation .)
    /               reduce using rule 75 (term -> operation .)


state 10

    (59) operation -> MUL .

    +               reduce using rule 59 (operation -> MUL .)
    -               reduce using rule 59 (operation -> MUL .)
    *               reduce using rule 59 (operation -> MUL .)
    /               reduce using rule 59 (operation -> MUL .)
    VARIABLE        reduce using rule 59 (operation -> MUL .)
    (               reduce using rule 59 (operation -> MUL .)
    PRINT           reduce using rule 59 (operation -> MUL .)
    IF              reduce using rule 59 (operation -> MUL .)
    ELSE            reduce using rule 59 (operation -> MUL .)
    ELIF            reduce using rule 59 (operation -> MUL .)
    WHILE           reduce using rule 59 (operation -> MUL .)
    BREAK           reduce using rule 59 (operation -> MUL .)
    FOR             reduce using rule 59 (operation -> MUL .)
    DEF             reduce using rule 59 (operation -> MUL .)
    RETURN          reduce using rule 59 (operation -> MUL .)
    NUMBER          reduce using rule 59 (operation -> MUL .)
    LEN             reduce using rule 59 (operation -> MUL .)
    $end            reduce using rule 59 (operation -> MUL .)
    }               reduce using rule 59 (operation -> MUL .)
    ;               reduce using rule 59 (operation -> MUL .)
    )               reduce using rule 59 (operation -> MUL .)
    ,               reduce using rule 59 (operation -> MUL .)
    ]               reduce using rule 59 (operation -> MUL .)
    >               reduce using rule 59 (operation -> MUL .)
    <               reduce using rule 59 (operation -> MUL .)
    =               reduce using rule 59 (operation -> MUL .)
    AND             reduce using rule 59 (operation -> MUL .)
    OR              reduce using rule 59 (operation -> MUL .)


state 11

    (61) operation -> DIV_ext .

    +               reduce using rule 61 (operation -> DIV_ext .)
    -               reduce using rule 61 (operation -> DIV_ext .)
    *               reduce using rule 61 (operation -> DIV_ext .)
    /               reduce using rule 61 (operation -> DIV_ext .)
    VARIABLE        reduce using rule 61 (operation -> DIV_ext .)
    (               reduce using rule 61 (operation -> DIV_ext .)
    PRINT           reduce using rule 61 (operation -> DIV_ext .)
    IF              reduce using rule 61 (operation -> DIV_ext .)
    ELSE            reduce using rule 61 (operation -> DIV_ext .)
    ELIF            reduce using rule 61 (operation -> DIV_ext .)
    WHILE           reduce using rule 61 (operation -> DIV_ext .)
    BREAK           reduce using rule 61 (operation -> DIV_ext .)
    FOR             reduce using rule 61 (operation -> DIV_ext .)
    DEF             reduce using rule 61 (operation -> DIV_ext .)
    RETURN          reduce using rule 61 (operation -> DIV_ext .)
    NUMBER          reduce using rule 61 (operation -> DIV_ext .)
    LEN             reduce using rule 61 (operation -> DIV_ext .)
    $end            reduce using rule 61 (operation -> DIV_ext .)
    }               reduce using rule 61 (operation -> DIV_ext .)
    ;               reduce using rule 61 (operation -> DIV_ext .)
    )               reduce using rule 61 (operation -> DIV_ext .)
    ,               reduce using rule 61 (operation -> DIV_ext .)
    ]               reduce using rule 61 (operation -> DIV_ext .)
    >               reduce using rule 61 (operation -> DIV_ext .)
    <               reduce using rule 61 (operation -> DIV_ext .)
    =               reduce using rule 61 (operation -> DIV_ext .)
    AND             reduce using rule 61 (operation -> DIV_ext .)
    OR              reduce using rule 61 (operation -> DIV_ext .)


state 12

    (30) else -> ELSE . { statements }

    {               shift and go to state 51


state 13

    (48) assignment -> array_term . = term
    (50) assignment -> array_term . + = term
    (52) assignment -> array_term . - = term
    (54) assignment -> array_term . * = term
    (56) assignment -> array_term . / = term
    (76) term -> array_term .

  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
    =               shift and go to state 56
    +               shift and go to state 55
    -               shift and go to state 54
    *               shift and go to state 52
    /               shift and go to state 53

  ! +               [ reduce using rule 76 (term -> array_term .) ]
  ! -               [ reduce using rule 76 (term -> array_term .) ]
  ! *               [ reduce using rule 76 (term -> array_term .) ]
  ! /               [ reduce using rule 76 (term -> array_term .) ]


state 14

    (12) statement -> for .

    }               reduce using rule 12 (statement -> for .)
    VARIABLE        reduce using rule 12 (statement -> for .)
    (               reduce using rule 12 (statement -> for .)
    PRINT           reduce using rule 12 (statement -> for .)
    IF              reduce using rule 12 (statement -> for .)
    ELSE            reduce using rule 12 (statement -> for .)
    ELIF            reduce using rule 12 (statement -> for .)
    WHILE           reduce using rule 12 (statement -> for .)
    BREAK           reduce using rule 12 (statement -> for .)
    FOR             reduce using rule 12 (statement -> for .)
    DEF             reduce using rule 12 (statement -> for .)
    RETURN          reduce using rule 12 (statement -> for .)
    NUMBER          reduce using rule 12 (statement -> for .)
    LEN             reduce using rule 12 (statement -> for .)
    $end            reduce using rule 12 (statement -> for .)


state 15

    (9) statement -> elif .

    }               reduce using rule 9 (statement -> elif .)
    VARIABLE        reduce using rule 9 (statement -> elif .)
    (               reduce using rule 9 (statement -> elif .)
    PRINT           reduce using rule 9 (statement -> elif .)
    IF              reduce using rule 9 (statement -> elif .)
    ELSE            reduce using rule 9 (statement -> elif .)
    ELIF            reduce using rule 9 (statement -> elif .)
    WHILE           reduce using rule 9 (statement -> elif .)
    BREAK           reduce using rule 9 (statement -> elif .)
    FOR             reduce using rule 9 (statement -> elif .)
    DEF             reduce using rule 9 (statement -> elif .)
    RETURN          reduce using rule 9 (statement -> elif .)
    NUMBER          reduce using rule 9 (statement -> elif .)
    LEN             reduce using rule 9 (statement -> elif .)
    $end            reduce using rule 9 (statement -> elif .)


state 16

    (7) statement -> if .

    }               reduce using rule 7 (statement -> if .)
    VARIABLE        reduce using rule 7 (statement -> if .)
    (               reduce using rule 7 (statement -> if .)
    PRINT           reduce using rule 7 (statement -> if .)
    IF              reduce using rule 7 (statement -> if .)
    ELSE            reduce using rule 7 (statement -> if .)
    ELIF            reduce using rule 7 (statement -> if .)
    WHILE           reduce using rule 7 (statement -> if .)
    BREAK           reduce using rule 7 (statement -> if .)
    FOR             reduce using rule 7 (statement -> if .)
    DEF             reduce using rule 7 (statement -> if .)
    RETURN          reduce using rule 7 (statement -> if .)
    NUMBER          reduce using rule 7 (statement -> if .)
    LEN             reduce using rule 7 (statement -> if .)
    $end            reduce using rule 7 (statement -> if .)


state 17

    (29) if -> IF . ( condition ) { statements }

    (               shift and go to state 57


state 18

    (27) while -> WHILE . ( condition ) { statements }

    (               shift and go to state 58


state 19

    (1) segment -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (13) statement -> . function
    (14) statement -> . runFunction
    (15) statement -> . return
    (46) assignment -> . VARIABLE = term
    (47) assignment -> . VARIABLE = array
    (48) assignment -> . array_term = term
    (49) assignment -> . VARIABLE + = term
    (50) assignment -> . array_term + = term
    (51) assignment -> . VARIABLE - = term
    (52) assignment -> . array_term - = term
    (53) assignment -> . VARIABLE * = term
    (54) assignment -> . array_term * = term
    (55) assignment -> . VARIABLE / = term
    (56) assignment -> . array_term / = term
    (57) operation -> . ADD
    (58) operation -> . SUB
    (59) operation -> . MUL
    (60) operation -> . DIV
    (61) operation -> . DIV_ext
    (62) operation -> . ( operation )
    (68) print -> . PRINT ( pcontent )
    (29) if -> . IF ( condition ) { statements }
    (30) else -> . ELSE { statements }
    (31) elif -> . ELIF ( condition ) { statements }
    (27) while -> . WHILE ( condition ) { statements }
    (26) break -> . BREAK
    (28) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (18) function -> . DEF VARIABLE ( functionTerms ) { statements }
    (19) function -> . DEF VARIABLE ( ) { statements }
    (20) runFunction -> . VARIABLE ( runFunctionTerms )
    (21) runFunction -> . VARIABLE ( )
    (16) return -> . RETURN
    (17) return -> . RETURN term
    (69) array_term -> . VARIABLE [ term ]
    (63) ADD -> . term + term
    (64) SUB -> . term - term
    (65) MUL -> . term * term
    (66) DIV -> . term / term
    (67) DIV_ext -> . term / / term
    (73) term -> . VARIABLE
    (74) term -> . NUMBER
    (75) term -> . operation
    (76) term -> . array_term
    (77) term -> . len
    (78) term -> . runFunction
    (79) len -> . LEN ( VARIABLE )

    $end            reduce using rule 1 (segment -> statements .)
    VARIABLE        shift and go to state 8
    (               shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 17
    ELSE            shift and go to state 12
    ELIF            shift and go to state 1
    WHILE           shift and go to state 18
    BREAK           shift and go to state 3
    FOR             shift and go to state 26
    DEF             shift and go to state 2
    RETURN          shift and go to state 27
    NUMBER          shift and go to state 29
    LEN             shift and go to state 24

    function                       shift and go to state 20
    len                            shift and go to state 21
    DIV                            shift and go to state 22
    SUB                            shift and go to state 35
    assignment                     shift and go to state 25
    while                          shift and go to state 34
    operation                      shift and go to state 9
    MUL                            shift and go to state 10
    statement                      shift and go to state 59
    for                            shift and go to state 14
    return                         shift and go to state 30
    term                           shift and go to state 31
    break                          shift and go to state 32
    runFunction                    shift and go to state 33
    array_term                     shift and go to state 13
    ADD                            shift and go to state 23
    if                             shift and go to state 16
    else                           shift and go to state 36
    DIV_ext                        shift and go to state 11
    print                          shift and go to state 6
    elif                           shift and go to state 15

state 20

    (13) statement -> function .

    }               reduce using rule 13 (statement -> function .)
    VARIABLE        reduce using rule 13 (statement -> function .)
    (               reduce using rule 13 (statement -> function .)
    PRINT           reduce using rule 13 (statement -> function .)
    IF              reduce using rule 13 (statement -> function .)
    ELSE            reduce using rule 13 (statement -> function .)
    ELIF            reduce using rule 13 (statement -> function .)
    WHILE           reduce using rule 13 (statement -> function .)
    BREAK           reduce using rule 13 (statement -> function .)
    FOR             reduce using rule 13 (statement -> function .)
    DEF             reduce using rule 13 (statement -> function .)
    RETURN          reduce using rule 13 (statement -> function .)
    NUMBER          reduce using rule 13 (statement -> function .)
    LEN             reduce using rule 13 (statement -> function .)
    $end            reduce using rule 13 (statement -> function .)


state 21

    (77) term -> len .

    +               reduce using rule 77 (term -> len .)
    -               reduce using rule 77 (term -> len .)
    *               reduce using rule 77 (term -> len .)
    /               reduce using rule 77 (term -> len .)
    )               reduce using rule 77 (term -> len .)
    ,               reduce using rule 77 (term -> len .)
    ]               reduce using rule 77 (term -> len .)
    VARIABLE        reduce using rule 77 (term -> len .)
    (               reduce using rule 77 (term -> len .)
    PRINT           reduce using rule 77 (term -> len .)
    IF              reduce using rule 77 (term -> len .)
    ELSE            reduce using rule 77 (term -> len .)
    ELIF            reduce using rule 77 (term -> len .)
    WHILE           reduce using rule 77 (term -> len .)
    BREAK           reduce using rule 77 (term -> len .)
    FOR             reduce using rule 77 (term -> len .)
    DEF             reduce using rule 77 (term -> len .)
    RETURN          reduce using rule 77 (term -> len .)
    NUMBER          reduce using rule 77 (term -> len .)
    LEN             reduce using rule 77 (term -> len .)
    $end            reduce using rule 77 (term -> len .)
    }               reduce using rule 77 (term -> len .)
    ;               reduce using rule 77 (term -> len .)
    >               reduce using rule 77 (term -> len .)
    <               reduce using rule 77 (term -> len .)
    =               reduce using rule 77 (term -> len .)
    AND             reduce using rule 77 (term -> len .)
    OR              reduce using rule 77 (term -> len .)


state 22

    (60) operation -> DIV .

    +               reduce using rule 60 (operation -> DIV .)
    -               reduce using rule 60 (operation -> DIV .)
    *               reduce using rule 60 (operation -> DIV .)
    /               reduce using rule 60 (operation -> DIV .)
    VARIABLE        reduce using rule 60 (operation -> DIV .)
    (               reduce using rule 60 (operation -> DIV .)
    PRINT           reduce using rule 60 (operation -> DIV .)
    IF              reduce using rule 60 (operation -> DIV .)
    ELSE            reduce using rule 60 (operation -> DIV .)
    ELIF            reduce using rule 60 (operation -> DIV .)
    WHILE           reduce using rule 60 (operation -> DIV .)
    BREAK           reduce using rule 60 (operation -> DIV .)
    FOR             reduce using rule 60 (operation -> DIV .)
    DEF             reduce using rule 60 (operation -> DIV .)
    RETURN          reduce using rule 60 (operation -> DIV .)
    NUMBER          reduce using rule 60 (operation -> DIV .)
    LEN             reduce using rule 60 (operation -> DIV .)
    $end            reduce using rule 60 (operation -> DIV .)
    }               reduce using rule 60 (operation -> DIV .)
    ;               reduce using rule 60 (operation -> DIV .)
    )               reduce using rule 60 (operation -> DIV .)
    ,               reduce using rule 60 (operation -> DIV .)
    ]               reduce using rule 60 (operation -> DIV .)
    >               reduce using rule 60 (operation -> DIV .)
    <               reduce using rule 60 (operation -> DIV .)
    =               reduce using rule 60 (operation -> DIV .)
    AND             reduce using rule 60 (operation -> DIV .)
    OR              reduce using rule 60 (operation -> DIV .)


state 23

    (57) operation -> ADD .

    +               reduce using rule 57 (operation -> ADD .)
    -               reduce using rule 57 (operation -> ADD .)
    *               reduce using rule 57 (operation -> ADD .)
    /               reduce using rule 57 (operation -> ADD .)
    VARIABLE        reduce using rule 57 (operation -> ADD .)
    (               reduce using rule 57 (operation -> ADD .)
    PRINT           reduce using rule 57 (operation -> ADD .)
    IF              reduce using rule 57 (operation -> ADD .)
    ELSE            reduce using rule 57 (operation -> ADD .)
    ELIF            reduce using rule 57 (operation -> ADD .)
    WHILE           reduce using rule 57 (operation -> ADD .)
    BREAK           reduce using rule 57 (operation -> ADD .)
    FOR             reduce using rule 57 (operation -> ADD .)
    DEF             reduce using rule 57 (operation -> ADD .)
    RETURN          reduce using rule 57 (operation -> ADD .)
    NUMBER          reduce using rule 57 (operation -> ADD .)
    LEN             reduce using rule 57 (operation -> ADD .)
    $end            reduce using rule 57 (operation -> ADD .)
    }               reduce using rule 57 (operation -> ADD .)
    ;               reduce using rule 57 (operation -> ADD .)
    )               reduce using rule 57 (operation -> ADD .)
    ,               reduce using rule 57 (operation -> ADD .)
    ]               reduce using rule 57 (operation -> ADD .)
    >               reduce using rule 57 (operation -> ADD .)
    <               reduce using rule 57 (operation -> ADD .)
    =               reduce using rule 57 (operation -> ADD .)
    AND             reduce using rule 57 (operation -> ADD .)
    OR              reduce using rule 57 (operation -> ADD .)


state 24

    (79) len -> LEN . ( VARIABLE )

    (               shift and go to state 60


state 25

    (4) statement -> assignment .

    }               reduce using rule 4 (statement -> assignment .)
    VARIABLE        reduce using rule 4 (statement -> assignment .)
    (               reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ELIF            reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LEN             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)


state 26

    (28) for -> FOR . ( assignment ; condition ; VARIABLE + + ) { statements }

    (               shift and go to state 61


state 27

    (16) return -> RETURN .
    (17) return -> RETURN . term
    (73) term -> . VARIABLE
    (74) term -> . NUMBER
    (75) term -> . operation
    (76) term -> . array_term
    (77) term -> . len
    (78) term -> . runFunction
    (57) operation -> . ADD
    (58) operation -> . SUB
    (59) operation -> . MUL
    (60) operation -> . DIV
    (61) operation -> . DIV_ext
    (62) operation -> . ( operation )
    (69) array_term -> . VARIABLE [ term ]
    (79) len -> . LEN ( VARIABLE )
    (20) runFunction -> . VARIABLE ( runFunctionTerms )
    (21) runFunction -> . VARIABLE ( )
    (63) ADD -> . term + term
    (64) SUB -> . term - term
    (65) MUL -> . term * term
    (66) DIV -> . term / term
    (67) DIV_ext -> . term / / term

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
    }               reduce using rule 16 (return -> RETURN .)
    PRINT           reduce using rule 16 (return -> RETURN .)
    IF              reduce using rule 16 (return -> RETURN .)
    ELSE            reduce using rule 16 (return -> RETURN .)
    ELIF            reduce using rule 16 (return -> RETURN .)
    WHILE           reduce using rule 16 (return -> RETURN .)
    BREAK           reduce using rule 16 (return -> RETURN .)
    FOR             reduce using rule 16 (return -> RETURN .)
    DEF             reduce using rule 16 (return -> RETURN .)
    RETURN          reduce using rule 16 (return -> RETURN .)
    $end            reduce using rule 16 (return -> RETURN .)
    VARIABLE        shift and go to state 39
    NUMBER          shift and go to state 29
    (               shift and go to state 5
    LEN             shift and go to state 24

  ! VARIABLE        [ reduce using rule 16 (return -> RETURN .) ]
  ! (               [ reduce using rule 16 (return -> RETURN .) ]
  ! NUMBER          [ reduce using rule 16 (return -> RETURN .) ]
  ! LEN             [ reduce using rule 16 (return -> RETURN .) ]

    DIV                            shift and go to state 22
    array_term                     shift and go to state 42
    ADD                            shift and go to state 23
    DIV_ext                        shift and go to state 11
    SUB                            shift and go to state 35
    MUL                            shift and go to state 10
    term                           shift and go to state 63
    operation                      shift and go to state 62
    runFunction                    shift and go to state 41
    len                            shift and go to state 21

state 28

    (3) statements -> statement .
